Style and structure changes to prevent tabs wrapping
In addition to using flex layout to pin tab contents to the bottom of
the available space, this reduces them from `h2` to `h4` to make them more
compact and consistent with the headers below them.

--- a/traffic_stops/static/less/index.less
+++ b/traffic_stops/static/less/index.less
@@ -307,9 +307,14 @@ body#state {
   .nav-tabs {
     margin-top: 1rem;
 
+    .flex-layout();
+    .flex-direction(row);
+    .flex-wrap(nowrap);
+    .align-items(flex-end);
+
     > li {
       > a {
-        > h2 {
+        > h4 {
           margin: 0;
         }
       }
